Fix native-image compilation